syntax = "proto3";

package judge;

option go_package = "/judge";

service JudgeService {
    rpc GetTestCase(GetTestCasesRequest) returns (GetTestCasesResponse);
    rpc RunTests(RunTestsRequest) returns (RunTestsResponse);
}

message RunTestsRequest {
    string path = 1;
    string code = 2;
    string language = 3;
}

message RunTestsResponse {
    repeated TestResult results = 1;
}

message TestResult {
    string label = 1;
    bool passed = 2;
    string output = 3;
    string expected_output = 4;
}

message GetTestCasesRequest {
    string path = 1;
}

message GetTestCasesResponse {
    repeated TestCase testcases = 1;
}

message TestCase {
    string label = 1;
    repeated string inputs = 2;
    string expected_output = 3;
}